ajuste de renderização do mapa html

--- a/TCC- Sistema Psicosoft/bot_web.html
+++ b/TCC- Sistema Psicosoft/bot_web.html
@@ -28,8 +28,11 @@
             <button id="restart-chat" class="menu-button">Reiniciar Chat</button>
         </div>
 
-        <div id="chatbox" class="chatbox">
-            </div>
+        <div id="chatbox" class="chatbox"></div>
+        <div id="map-container" style="display:none; padding: 10px 10px 0; background: var(--bg-color-main);">
+            <p class="map-title-info">otas mais curtas a partir da sua localização.</p>
+            <div id="map" style="height: 300px; width: 100%; border-radius: 8px;"></div>
+        </div>
 
         <div id="typing-indicator" class="typing-indicator">
             <span></span>
@@ -45,6 +48,8 @@
             </button>
         </div>
     </div>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=SUA_CHAVE_API&libraries=geometry&callback=initMap" defer></script>
+    
     <script src="js/script_bot.js" defer></script>
 
 </body>
