--- a/TCC- Sistema Psicosoft/bot_web.html
+++ b/TCC- Sistema Psicosoft/bot_web.html
@@ -48,8 +48,11 @@
             </button>
         </div>
     </div>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBORu9lOFwxG0eD0ex6Mc1HenQkPW3K5Ow&libraries=geometry&callback=initMap" defer></script>
     
+    <script async 
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBORu9lOFwxG0eD0ex6Mc1HenQkPW3K5Ow&libraries=geometry" 
+        defer>
+    </script>
     <script src="js/script_bot.js" defer></script>
 
 </body>
