--- a/TCC- Sistema Psicosoft/bot_web.html
+++ b/TCC- Sistema Psicosoft/bot_web.html
@@ -49,9 +49,7 @@
         </div>
     </div>
 
-    <script async
-        loading="async"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBORu9lOFwxG0eD0ex6Mc1HenQkPW3K5Ow&libraries=geometry">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBORu9lOFwxG0eD0ex6Mc1HenQkPW3K5Ow&libraries=geometry" loading="async" defer>
     </script>
     <script src="js/script_bot.js" defer></script>
 
