--- a/TCC- Sistema Psicosoft/bot_web.html
+++ b/TCC- Sistema Psicosoft/bot_web.html
@@ -49,8 +49,11 @@
         </div>
     </div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBORu9lOFwxG0eD0ex6Mc1HenQkPW3K5Ow&libraries=geometry" loading="async" defer>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBORu9lOFwxG0eD0ex6Mc1HenQkPW3K5Ow&libraries=geometry&loading=async"
+        defer>
     </script>
+    
     <script src="js/script_bot.js" defer></script>
 </body>
 </html>
