Implementação de Carrossel Dinâmico no Dashboard

--- a/TCC- Sistema Psicosoft/dashboard.html
+++ b/TCC- Sistema Psicosoft/dashboard.html
@@ -70,6 +70,43 @@
                     </p>
                 </section>
 
+                <section class="info-carousel-container">
+                    <div class="info-carousel-slides">
+                        
+                        <div class="carousel-slide active">
+                            <div class="card-icon" style="background-color: var(--primary-light);"><i data-lucide="brain-circuit"></i></div>
+                            <h3>Entenda a Ansiedade</h3>
+                            <p>A ansiedade é uma reação normal ao estresse. Aprenda a identificar os gatilhos e a usar técnicas de respiração para controlar os sintomas no dia a dia.</p>
+                        </div>
+
+                        <div class="carousel-slide">
+                            <div class="card-icon" style="background-color: var(--accent-1);"><i data-lucide="leaf"></i></div>
+                            <h3>A Natureza como Terapia</h3>
+                            <p>Passar tempo ao ar livre, mesmo que por 15 minutos, pode reduzir o cortisol (hormônio do estresse) e melhorar seu humor. Que tal uma caminhada hoje?</p>
+                        </div>
+
+                        <div class="carousel-slide">
+                            <div class="card-icon" style="background-color: var(--accent-2);"><i data-lucide="smartphone-off"></i></div>
+                            <h3>Detox Digital Noturno</h3>
+                            <p>Desconecte-se de telas pelo menos 30 minutos antes de dormir. Isso melhora a qualidade do seu sono e ajuda a acalmar a mente.</p>
+                        </div>
+
+                        <div class="carousel-slide">
+                            <div class="card-icon" style="background-color: #f5b971;"><i data-lucide="smile-plus"></i></div>
+                            <h3>Pratique a Gratidão</h3>
+                            <p>Anote três coisas pelas quais você é grato(a) todos os dias. Este simples exercício pode aumentar seus sentimentos de felicidade e bem-estar.</p>
+                        </div>
+
+                        <div class="carousel-slide">
+                            <div class="card-icon" style="background-color: #d9a0c7;"><i data-lucide="ear"></i></div>
+                            <h3>A Importância da Escuta</h3>
+                            <p>Oferecer escuta ativa a um amigo ou familiar fortalece laços e também nos ajuda a processar nossas próprias emoções. Conecte-se com alguém hoje!</p>
+                        </div>
+                    </div>
+                    <button class="carousel-nav prev"><i data-lucide="chevron-left"></i></button>
+                    <button class="carousel-nav next"><i data-lucide="chevron-right"></i></button>
+                    <div class="carousel-pagination"></div>
+                </section>
                 <section class="action-grid">
                     <a href="agendar.html" class="action-card">
                         <div class="card-icon">
