--- a/TCC- Sistema Psicosoft/bem-estar.html
+++ b/TCC- Sistema Psicosoft/bem-estar.html
@@ -164,6 +164,8 @@
 
             </div>
         </div>
+
+        <div class="tip-focus-overlay" id="tip-focus-overlay"></div>
     </main>
 
     <div class="chat-widget">
