--- a/TCC- Sistema Psicosoft/bot_web.html
+++ b/TCC- Sistema Psicosoft/bot_web.html
@@ -16,9 +16,7 @@
                 <span class="header-title">PsicIA</span>
             </div>
             <button id="menu-toggle" class="menu-toggle" aria-label="Menu">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
-                    <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
-                </svg>
+                
             </button>
         </div>
 
@@ -30,7 +28,7 @@
 
         <div id="chatbox" class="chatbox"></div>
         <div id="map-container" style="display:none; padding: 10px 10px 0; background: var(--bg-color-main);">
-            <p class="map-title-info">otas mais curtas a partir da sua localização.</p>
+            <p class="map-title-info">Rotas mais curtas a partir da sua localização.</p>
             <div id="map" style="height: 300px; width: 100%; border-radius: 8px;"></div>
         </div>
 
