melhoria mapa necessária (padrão antigo depreciado)

--- a/TCC- Sistema Psicosoft/bot_web.html
+++ b/TCC- Sistema Psicosoft/bot_web.html
@@ -50,10 +50,10 @@
     </div>
 
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBORu9lOFwxG0eD0ex6Mc1HenQkPW3K5Ow&libraries=geometry&loading=async"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBORu9lOFwxG0eD0ex6Mc1HenQkPW3K5Ow&libraries=geometry,marker&loading=async"
         defer>
     </script>
-    
+
     <script src="js/script_bot.js" defer></script>
 </body>
 </html>
