--- a/TCC- Sistema Psicosoft/bot_web.html
+++ b/TCC- Sistema Psicosoft/bot_web.html
@@ -28,6 +28,8 @@
             <button id="restart-chat" class="menu-button">Reiniciar Chat</button>
         </div>
 
+        <div id="chatbox" class="chatbox"></div>
+
         <div id="typing-indicator" class="typing-indicator">
             <span></span>
             <span></span>
